# medichaser

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  connect-aws.sh  deploy-aws.sh  medichaser.py  pyproject.toml  remove-aws.sh  tests.py
.github/workflows/: docker_build.yml  docker_build_and_tests.yml  type_check.yml
terraform/lightsail/: deploy.sh  main.tf  outputs.tf  variables.tf
